# titan

./: .env.example  .gitignore  AUTOPSY_FINDINGS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: instrument_map.yaml  news_noise_filters.yaml  nifty50_aliases.yaml  nse_holidays.yaml
docs/: 01_strategy_research.md  02_strategy_rankings.md  03_architecture.md  04_dashboard_spec.md  05_live_readiness_checklist.md  06_risk_framework.md  08_automation_design.md  09_roadmap_analysis.md  10_changes_and_decisions.md  11_project_overview_and_improvement_plan.md  12_strategy_guide_and_analysis.md  13_external_analysis_triage.md  Entrepreneurial Growth Strategy Manifesto.md  Project Insights Analysis and Strategy Development.md  operator_journal.md
frontend/: README.md  index.html  package.json  vite.config.ts
migrations/: 001_init.sql  002_instruments_master.sql  003_news_tables.sql  004_news_signal_direction.sql  005_decision_log.sql  006_analytics.sql  007_trade_regime.sql  008_leaderboard.sql  009_operator_decisions.sql  010_universe_selection.sql  011_trade_latency.sql
scripts/: cleanup_synth.sh  compare_strategies.py  demo.sh  operator_log.py  readiness_check.sh  run_orb_backtest.py  run_tsmom_backtest.py
tests/: conftest.py  test_aggregator.py  test_analytics_recorder.py  test_clock.py  test_execution_locks.py  test_feed_supervisor.py  test_instrument_kind.py  test_news_category_v2.py  test_options.py  test_paper_broker.py  test_rate_limit.py  test_risk_engine.py  test_session_refresh.py  test_sizing.py  test_strategy_factory.py  test_strategy_id.py  (+3 more)
(+90 files in other folders)
