[project]
name = "titan"
version = "0.0.1"
description = "Institutional-style algo trading platform for NSE (Angel One SmartAPI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "numba>=0.59",
    "vectorbt>=0.26",
    "backtrader>=1.9.78.123",
    "streamlit>=1.32",
    "plotly>=5.20",
    "pyotp>=2.9",            # Angel One TOTP login
    "smartapi-python>=1.4",  # Angel One official SDK
    "logzero>=1.7",          # required by smartapi-python (WS feed)
    "websocket-client>=1.7", # required by smartapi-python SmartWebSocketV2
    "structlog>=24.1",
    "python-telegram-bot>=21.0",
    "pytz>=2024.1",
    "click>=8.1",
    "streamlit-autorefresh>=1.0",   # dashboard 5s auto-refresh (titan/dashboard/app.py)
    "rapidfuzz>=3.0",               # news entity fuzzy-matching (titan/news/entities.py)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.9"]

[project.scripts]
titan-api = "titan.api.main:run"
titan-dash = "titan.dashboard.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
